--- a/sources/meta-stm32mp/conf/machine/stm32mp15-disco.conf
+++ b/sources/meta-stm32mp/conf/machine/stm32mp15-disco.conf
@@ -16,7 +16,7 @@ UBOOT_EXTLINUX_ROOT ?= "root=/dev/mmcblk0p${bootpart}"
 UBOOT_EXTLINUX_CONSOLE ?= "${SERIAL_CONSOLES}"
 UBOOT_EXTLINUX_FDT ?= "../stm32mp157a-dk1.dtb"
 
-PREFERRED_PROVIDER_virtual/kernel ??= "linux-torvalds-next"
+PREFERRED_PROVIDER_virtual/kernel ??= "linux-torvalds"
 # PREFERRED_PROVIDER_virtual/kernel ??= "linux-yocto"
 # PREFERRED_PROVIDER_virtual/bootloader ??= "u-boot-olimex"
 # PREFERRED_PROVIDER_u-boot ??= "u-boot-stm32mp"
