fix stm32mp157a-dk1 boot

--- a/sources/meta-stm32mp/conf/machine/stm32mp15-disco.conf
+++ b/sources/meta-stm32mp/conf/machine/stm32mp15-disco.conf
@@ -1,8 +1,6 @@
 #@TYPE: Machine
-#@NAME: STMP157-OLinuXino-LIME2
+#@NAME: STM32MP157D-DK1
 #@MAINTAINER: Marcin Bober <mbober1@gmail.com>
-#@DESCRIPTION: Open Source Hardware Linux Computer with ST Microelectronics STM32MP157 Dual Core Cortex-A7 SOC	
-#https://www.olimex.com/Products/OLinuXino/STMP1/STMP157-OLinuXino-LIME2/open-source-hardware
 
 require conf/machine/include/stm32mp1.inc
 
