--- a/sources/meta-stm32mp/conf/layer.conf
+++ b/sources/meta-stm32mp/conf/layer.conf
@@ -10,4 +10,4 @@ BBFILE_PATTERN_meta-stm32mp = "^${LAYERDIR}/"
 BBFILE_PRIORITY_meta-stm32mp = "10"
 
 LAYERDEPENDS_meta-stm32mp = "core"
-LAYERSERIES_COMPAT_meta-stm32mp = "scarthgap"
+LAYERSERIES_COMPAT_meta-stm32mp = "scarthgap styhead walnascar"
