--- a/sources/meta-stm32mp/recipes-kernel/linux/files/stm32.cfg
+++ b/sources/meta-stm32mp/recipes-kernel/linux/files/stm32.cfg
@@ -30,8 +30,6 @@ CONFIG_BATTERY_CPCAP=m
 # CONFIG_CHARGER_SBS is not set
 # CONFIG_MANAGER_SBS is not set
 # CONFIG_BATTERY_BQ27XXX is not set
-CONFIG_CHARGER_AXP20X=m
-CONFIG_BATTERY_AXP20X=m
 CONFIG_AXP20X_POWER=m
 # CONFIG_BATTERY_MAX17040 is not set
 # CONFIG_BATTERY_MAX17042 is not set
@@ -138,3 +136,4 @@ CONFIG_HW_RANDOM=m
 CONFIG_HW_RANDOM_STM32=m
 CONFIG_HW_RANDOM_OPTEE=m
 CONFIG_HW_RANDOM_ARM_SMCCC_TRNG=m
+CONFIG_RPMSG_TTY=m
