--- a/sources/meta-stm32mp/conf/machine/stm32mp15-disco.conf
+++ b/sources/meta-stm32mp/conf/machine/stm32mp15-disco.conf
@@ -5,6 +5,7 @@
 require conf/machine/include/stm32mp1.inc
 
 KERNEL_DEVICETREE ?= "st/stm32mp157a-dk1.dtb"
+KBUILD_DEFCONFIG = "multi_v7_defconfig"
 
 SPL_BINARY ?= "u-boot-spl.stm32"
 UBOOT_MACHINE ?= "stm32mp15_basic_defconfig"
@@ -14,8 +15,7 @@ UBOOT_EXTLINUX_ROOT ?= "root=/dev/mmcblk0p${bootpart}"
 UBOOT_EXTLINUX_CONSOLE ?= "${SERIAL_CONSOLES}"
 UBOOT_EXTLINUX_FDT ?= "../stm32mp157a-dk1.dtb"
 
-PREFERRED_PROVIDER_virtual/kernel ??= "linux-torvalds"
-# PREFERRED_PROVIDER_virtual/kernel ??= "linux-yocto"
+PREFERRED_PROVIDER_virtual/kernel ??= "linux-yocto"
 # PREFERRED_PROVIDER_virtual/bootloader ??= "u-boot-olimex"
 # PREFERRED_PROVIDER_u-boot ??= "u-boot-stm32mp"
 
