--- a/sources/meta-stm32mp/conf/machine/stm32mp15-disco.conf
+++ b/sources/meta-stm32mp/conf/machine/stm32mp15-disco.conf
@@ -4,8 +4,9 @@
 
 require conf/machine/include/stm32mp1.inc
 
-KERNEL_DEVICETREE ?= "st/stm32mp157a-dk1.dtb"
+KERNEL_DEVICETREE ?= "st/stm32mp157c-dk2.dtb"
 KBUILD_DEFCONFIG = "multi_v7_defconfig"
+KCONFIG_MODE = "--alldefconfig"
 
 SPL_BINARY ?= "u-boot-spl.stm32"
 UBOOT_MACHINE ?= "stm32mp15_basic_defconfig"
@@ -13,11 +14,9 @@ UBOOT_EXTLINUX ?= "1"
 UBOOT_EXTLINUX_KERNEL_ARGS ?= "rootwait rw rootfstype=ext4"
 UBOOT_EXTLINUX_ROOT ?= "root=/dev/mmcblk0p${bootpart}"
 UBOOT_EXTLINUX_CONSOLE ?= "${SERIAL_CONSOLES}"
-UBOOT_EXTLINUX_FDT ?= "../stm32mp157a-dk1.dtb"
+UBOOT_EXTLINUX_FDT ?= "../stm32mp157c-dk2.dtb"
 
 PREFERRED_PROVIDER_virtual/kernel ??= "linux-yocto"
-# PREFERRED_PROVIDER_virtual/bootloader ??= "u-boot-olimex"
-# PREFERRED_PROVIDER_u-boot ??= "u-boot-stm32mp"
 
 MACHINE_ESSENTIAL_EXTRA_RDEPENDS += " \
     kernel-image \
@@ -25,6 +24,5 @@ MACHINE_ESSENTIAL_EXTRA_RDEPENDS += " \
     kernel-modules \
     u-boot \
 "
-
 
 MACHINE_FEATURES += "usbhost usbgadget splash screen rtc serial"
